final part done with remote mediater

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,11 @@ dependencies {
 
     // paging 3
     implementation "androidx.paging:paging-runtime-ktx:3.0.0-alpha11"
+
+    // Room
+    def room_version = "2.3.0-beta02"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
 }
